deleted header from app, add new style for app in main.css, new logic for slider: add buttons, mechanism of changing icons. bug with scrollbar when images on was fixed also

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,11 +3,12 @@
 #app {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
+    text-align: center;
     min-height: 100vh;
 
-    max-width: 1280px;
-    margin: 0;
+    max-width: 100vw;
+    margin: auto;
     padding: 0;
 
     font-weight: normal;
